--- a/view.html
+++ b/view.html
@@ -36,7 +36,8 @@
         }
 
         #positionSliderRange {
-            width:520px;
+            /*width:520px;*/
+            width:580px;
             display:inline;
             margin-left:10px;
             position:relative;
@@ -59,40 +60,43 @@
     <div id="map"></div>
 
     <div id="positionSlider" class="hidden">
-        <button class="btn btn-default btn-xs" id="playpause"><i class="fa fa-play"></i></button>
+        <!--<button class="btn btn-default btn-xs" id="playpause"><i class="fa fa-play"></i></button>-->
         <input id="positionSliderRange" type="range" min="0" max="0" step="1" value="0" data-toggle="tooltip" data-placement="top" title="" />
     </div>
 
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
-    <script src="http://thomasbrueggemann.github.io/leaflet.boat/js/leaflet.boat.min.js"></script>
+    <script src="http://thomasbrueggemann.github.io/leaflet.boatmarker/js/leaflet.boatmarker.min.js"></script>
     <script>
 
         var map = L.map("map").setView([51.505, -0.09], 2);
 
         // basic tile layer of mapbox
-        L.tileLayer("https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6IjZjNmRjNzk3ZmE2MTcwOTEwMGY0MzU3YjUzOWFmNWZhIn0.Y8bhBaUMqFiPrDRW9hieoQ", {
-            "maxZoom": 18,
-            "attribution": "Map data &copy; <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors, " +
-                "<a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA</a>, " +
-                "Imagery © <a href=\"http://mapbox.com\">Mapbox</a>",
-            "id": "mapbox.outdoors"
+        L.tileLayer("https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoidG9tYXN6YnJ1ZSIsImEiOiJXWmNlSnJFIn0.xvLReqNnXy_wndeZ8JGOEA", {
+            attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+                maxZoom: 18,
+                id: "tomaszbrue.npi6i8ia",
+                accessToken: "pk.eyJ1IjoidG9tYXN6YnJ1ZSIsImEiOiJXWmNlSnJFIn0.xvLReqNnXy_wndeZ8JGOEA"
         }).addTo(map);
 
-        // add openseamap markers
-        L.tileLayer("http://tiles.openseamap.org/seamark/{z}/{x}/{y}.png", {
-            "maxZoom": 18,
-            "minZoom": 9
-        }).addTo(map);
+        if(!location.hash) {
+            alert("No data parameter given!");
+        }
 
         // load geojson file
-        $.getJSON("20151004.geojson", function(data) {
+        $.getJSON(location.hash.replace("#", "") + ".geojson", function(data) {
 
             // add geojson to map
             var geojsonLayer = L.geoJson(data, {
                 "color": "#e74c3c",
                 "weight": 3,
-                "opacity": 0.8
+                "opacity": 1,
+                "smoothFactor": 2
+            }).addTo(map);
+
+            L.tileLayer("http://tiles.openseamap.org/seamark/{z}/{x}/{y}.png", {
+                maxZoom: 17,
+                minZoom: 10
             }).addTo(map);
 
             // center track on map
@@ -101,7 +105,7 @@
             });
 
             // place boat
-            var boat = L.boat(data.geometry.coordinates[0].reverse(), {
+            var boat = L.boatMarker(data.geometry.coordinates[0].reverse(), {
                 color: "#295D54"
             });
 
@@ -111,6 +115,8 @@
             var $pSR = $("#positionSliderRange");
             $pSR.attr("max", data.geometry.coordinates.length - 1);
 
+            var currentMeta;
+
             // slider was moved
             $pSR.on("input", function() {
                 var posIdx = $pSR.val();
@@ -119,7 +125,8 @@
                 boat.setLatLng(data.geometry.coordinates[posIdx].reverse());
 
                 // boat heading
-                boat.setHeading(data.properties.meta[posIdx].course);
+                currentMeta = data.properties.meta[posIdx];
+                boat.setHeading(currentMeta.course);
             });
         });
 
